# Perler

./: .gitignore  LICENSE  README.md  pseudocode.txt  requirements.txt  setup.cfg
examples/: Readme.txt  introduction.ipynb  introduction.md  parameter_detail.ipynb  parameter_detail.md  tutorial.ipynb  tutorial.md
examples/data/: data_acquisition.txt
perler/: __init__.py  perler_class.py
