[metadata]
name = perler
version = attr: perler.__version__
url = https://github.com/yasokochi/Perler
author = Yasushi Okochi, Shunta Sakaguchi, Ken Nakae, Takefumi Kondo, and Honda Naoki
author_email = ookouchi.yasushi.68m@st.kyoto-u.ac.jp
license_file = LICENSE
description = perler: Probabilistic Embryo Reconstruction by Linear Evaluation of scRNAseq
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
    joblib
    numpy
    pandas
    scipy
    scikit-learn
    matplotlib